Fix spacing on thanks and get in touch pages

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -43,7 +43,7 @@ h4 {
 }
 
 a {
-  border-bottom: 4px solid $teal;
+  color: $teal;
   text-decoration: none;
 
   &:hover {
@@ -52,6 +52,10 @@ a {
 
   &.decorated {
     text-decoration: underline;
+  }
+
+  &.description-callout {
+    border-bottom: 4px solid $teal;
   }
 }
 
